include/altdss/capi/dss.h

    /*! 
    Number of shots to lockout (fast + delayed)
    */
    ALTDSS_CAPI_DLL int32_t Reclosers_Get_Shots(void);
    ALTDSS_CAPI_DLL void Reclosers_Set_NumFast(int32_t Value);
    ALTDSS_CAPI_DLL void Reclosers_Set_Shots(int32_t Value);
    /*! 
    Phase trip curve multiplier or actual amps
    */
    ALTDSS_CAPI_DLL double Reclosers_Get_PhaseTrip(void);
    /*! 
    Phase Trip multiplier or actual amps
    */
    ALTDSS_CAPI_DLL void Reclosers_Set_PhaseTrip(double Value);
    /*! 
    Ground (3I0) instantaneous trip setting - curve multiplier or actual amps.
    */
    ALTDSS_CAPI_DLL double Reclosers_Get_GroundInst(void);
    /*! 
    Ground (3I0) trip multiplier or actual amps
    */
    ALTDSS_CAPI_DLL double Reclosers_Get_GroundTrip(void);
    /*! 
    Phase instantaneous curve multiplier or actual amps
    */
    ALTDSS_CAPI_DLL double Reclosers_Get_PhaseInst(void);
    /*! 
    Ground (3I0) trip instantaneous multiplier or actual amps
    */
    ALTDSS_CAPI_DLL void Reclosers_Set_GroundInst(double Value);
    ALTDSS_CAPI_DLL void Reclosers_Set_GroundTrip(double Value);
    ALTDSS_CAPI_DLL void Reclosers_Set_PhaseInst(double Value);
    /*! 
    Close the switched object controlled by the recloser. Resets recloser to first operation.
    */
    ALTDSS_CAPI_DLL void Reclosers_Close(void);
    /*! 
    Open recloser's controlled element and lock out the recloser.
    */
    ALTDSS_CAPI_DLL void Reclosers_Open(void);
    /*! 
    Get/Set the active Recloser by index into the recloser list.  1..Count
    */
    ALTDSS_CAPI_DLL int32_t Reclosers_Get_idx(void);
    /*! 
    Get/Set the Active Recloser by index into the recloser list. 1..Count
    */
    ALTDSS_CAPI_DLL void Reclosers_Set_idx(int32_t Value);